syntax = "proto3";

package org.project_planton.shared.iac.terraform;

// terraform operation type
// the recommended best practice to prefix the entry with enum name has been intentionally ignored
// to allow users to specify a user-friendly name in the input.
enum TerraformOperationType {
  terraform_operation_type_unspecified = 0;
  init = 1;
  refresh = 2;
  plan = 3;
  apply = 4;
  destroy = 5;
}

//terraform backend type
enum TerraformBackendType {
  // Unspecified or unknown backend type.
  terraform_backend_type_unspecified = 0;

  // Local filesystem backend (the default if none is configured).
  local = 1;

  // Amazon S3-based backend for remote state storage.
  s3 = 2;

  // Google Cloud Storage backend for storing state.
  gcs = 3;

  // Azure Resource Manager backend using Azure Blob Storage.
  azurerm = 4;
}
