syntax = "proto3";

package org.project_planton.provider.gcp.gcpcloudcdn.v1;

// **GcpCloudCdnStackOutputs** contains the outputs generated after deploying a Cloud CDN resource.
// These outputs provide essential information for connecting to the CDN, monitoring performance,
// and integrating with other services.
message GcpCloudCdnStackOutputs {
  // URL of the Cloud CDN endpoint (load balancer frontend).
  // This is the public URL where users access cached content.
  // Format: https://<ip-address> or https://<custom-domain>
  string cdn_url = 1;

  // Global IP address assigned to the load balancer.
  // Use this for DNS configuration when using custom domains.
  string global_ip_address = 2;

  // Name of the backend resource (BackendBucket or BackendService).
  // Use this to reference the backend in other GCP resources.
  string backend_name = 3;

  // Full resource ID of the backend (projects/{project}/global/backendBuckets/{name} or backendServices/{name}).
  // Use this for API calls and Terraform/Pulumi references.
  string backend_id = 4;

  // Whether Cloud CDN is enabled on the backend.
  // Should always be "true" for successful deployments.
  string cdn_enabled = 5;

  // Cache mode configured for this CDN (CACHE_ALL_STATIC, USE_ORIGIN_HEADERS, FORCE_CACHE_ALL).
  string cache_mode = 6;

  // URL map name (for load balancer routing configuration).
  // Use this to add additional URL routing rules or backends.
  string url_map_name = 7;

  // Target HTTPS proxy name (for SSL/TLS configuration).
  // Use this to update SSL certificates or security policies.
  string https_proxy_name = 8;

  // SSL certificate name or ID (if using Google-managed or self-managed certificate).
  string ssl_certificate_name = 9;

  // Cloud Armor security policy name (if Cloud Armor is enabled).
  // Empty if Cloud Armor is not configured.
  string cloud_armor_policy_name = 10;

  // Backend type (GCS_BUCKET, COMPUTE_SERVICE, CLOUD_RUN, EXTERNAL).
  // Indicates which type of origin is configured.
  string backend_type = 11;

  // GCS bucket name (only populated if backend_type is GCS_BUCKET).
  string gcs_bucket_name = 12;

  // Compute Engine instance group name (only populated if backend_type is COMPUTE_SERVICE).
  string instance_group_name = 13;

  // Cloud Run service name (only populated if backend_type is CLOUD_RUN).
  string cloud_run_service_name = 14;

  // Cloud Run service region (only populated if backend_type is CLOUD_RUN).
  string cloud_run_region = 15;

  // External origin hostname (only populated if backend_type is EXTERNAL).
  string external_hostname = 16;

  // Custom domains configured for this CDN (if any).
  // These are the user-friendly domains that resolve to the CDN.
  repeated string custom_domains = 17;

  // Health check URL (if health check is configured for Compute Engine or Cloud Run backends).
  string health_check_url = 18;

  // Monitoring dashboard URL (Cloud Console link to view CDN metrics).
  // Direct link to cache hit ratio, bandwidth, and request metrics.
  string monitoring_dashboard_url = 19;
}
